--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,7 @@
 S3method(coef,hiperglm)
 S3method(print,hiperglm)
 S3method(vcov,hiperglm)
+export(hiper_glm)
+export(coef)
+export(print)
+export(vcov)
