--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(coef,hiperglm)
 S3method(print,hiperglm)
 S3method(vcov,hiperglm)
+export(are_all_close)
 export(hiper_glm)
-export(coef)
-export(print)
-export(vcov)
+export(simulate_data)
