Finish RcppEigen integration

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,5 @@ S3method(coef,hiperglm)
 S3method(print,hiperglm)
 S3method(vcov,hiperglm)
 export(hiper_glm)
+importFrom(Rcpp,sourceCpp)
+useDynLib(hiperglm, .registration = TRUE)
