--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,7 @@ RoxygenNote: 7.3.2
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+LinkingTo: 
+    Rcpp, RcppEigen
+Imports: 
+    Rcpp, RcppEigen
